# songwriter

./: .gitignore  CHANGELOG.md  GITHUB_GUIDE.md  LICENSE.md  README.md  RELEASE_GUIDE.md  app.js  audio.js  index.html  instruments.js  midi.js  musicxml.js  package.json  pdf.js  piano.js  server.js  styles.css
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
