[package]
name = "songwriter"
version = "1.0.0"
description = "Songwriter - Open Source Song Composition Tool"
authors = ["Lone Hansen"]
license = "GPL-3.0"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }

[dependencies]
tauri = { version = "^2.0.0", features = [] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
